# novaiso-engine

./: CMakeLists.txt  README.md  editor_main.cpp  imgui.ini  runtime_main.cpp
demo_project/Builds/novaiso_demo/: project.json
demo_project/Builds/novaiso_demo/assets/: clouds.ppm  crate.ppm  player.ppm  tileset.ppm
demo_project/Builds/novaiso_demo/levels/: demo.niso
demo_project/Builds/novaiso_demo/resources/objects/: player.nobject
demo_project/Builds/novaiso_demo/resources/sprites/: sprite.nsprite
demo_project/Builds/novaiso_demo/resources/triggers/: camera_swap.ntrigger
demo_project/Builds/novaiso_demo/scripts/: player.py  triggers.py
demo_project/Builds/novaiso_demo/shaders/: pixelate.frag  sprite.frag  sprite.vert
demo_project/assets/: mountains.ppm  sky.ppm
demo_project/localization/: editor_en.json  editor_ru.json
demo_project/resources/objects/: crate.nobject  object.nobject
demo_project/resources/sprites/: crate.nsprite  player.nsprite
demo_project/resources/triggers/: checkpoint.ntrigger
demo_project/scripts/: crate.py
docs/: novaiso_engine_manual.html
shaders/: bloom.frag  chromatic.frag  copy.frag  fog.frag  light.frag  outline.frag  post.vert  rain.frag  sprite.frag  sprite.vert  vignette.frag
src/assets/: AssetManager.cpp  AssetManager.h  Project.cpp  Project.h
src/camera/: Camera2D.cpp  Camera2D.h
src/core/: Application.cpp  Application.h  EmbeddedResources.cpp  EmbeddedResources.h  FileIO.cpp  FileIO.h  ImageIO.cpp  ImageIO.h  Input.cpp  Input.h  ThreadPool.cpp  ThreadPool.h  VulkanBootstrap.cpp  VulkanBootstrap.h
src/editor/: EditorApp.cpp  EditorApp.h
src/entities/: Entity.h  Scene.cpp  Scene.h
src/physics/: PlatformerPhysics.cpp  PlatformerPhysics.h
src/renderer/: Framebuffer.cpp  Framebuffer.h  PostProcessStack.cpp  PostProcessStack.h  Renderer2D.cpp  Renderer2D.h  ShaderProgram.cpp  ShaderProgram.h  Texture2D.cpp  Texture2D.h
src/runtime/: RuntimeApp.cpp  RuntimeApp.h
src/scripting/: PythonRuntimeConfig.h.in  PythonScripting.cpp  PythonScripting.h
src/triggers/: TriggerSystem.cpp  TriggerSystem.h
src/ui/: HtmlUiRuntime.cpp  HtmlUiRuntime.h
